<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:attr/selectableItemBackground">

    <TextView
        android:id="@+id/nomeEpisodioTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nomeEpisodio"
        android:textSize="25sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/vistoCbL"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/vistoCbL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <TextView
            android:id="@+id/foiVistoTv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vistoEpisodio" />

        <CheckBox
            android:id="@+id/foiVistoCb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <TextView
        android:id="@+id/numeroSequencialEpisodioTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="Episódio"
        android:text="@string/numeroSequencial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/duracaoEpisodioTv"
        app:layout_constraintTop_toBottomOf="@id/nomeEpisodioTv"/>

    <TextView
        android:id="@+id/duracaoEpisodioTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duracaoEpisodio"
        android:hint="minutos"
        app:layout_constraintStart_toEndOf="@id/numeroSequencialEpisodioTv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeEpisodioTv"/>

</androidx.constraintlayout.widget.ConstraintLayout>