<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingHorizontal="5dp"
    tools:context=".EpisodioActivity">

    <TextView
        android:id="@+id/nomeTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/nomeEpisodio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/nomeEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeTv"
        android:enabled="true"/>

    <TextView
        android:id="@+id/numeroSequencialTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/numeroSequencial"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nomeEt"/>

    <EditText
        android:id="@+id/numeroSequencialEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroSequencialTv"
        android:enabled="true"/>

    <TextView
        android:id="@+id/duracaoTv"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/duracaoEpisodio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/numeroSequencialEt"/>

    <EditText
        android:id="@+id/duracaoEt"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duracaoTv"
        android:enabled="true"/>

    <CheckBox
        android:id="@+id/vistoCb"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/vistoEpisodio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duracaoEt"/>

    <Button
        android:id="@+id/salvarBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVoltar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/vistoCb"/>

</androidx.constraintlayout.widget.ConstraintLayout>